--- a/about.html
+++ b/about.html
@@ -89,9 +89,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
                     <h3 class="mb-3">We’re Innovators & <br>SEO Marketing Agency</h3>
-                    <p class="mb-4">Une statup de jeunes développeurs qui propose des services innovants. <br> Nous vous aidons à accelerer la croissance de votre entreprise et  de devolopper la présence digitale de votre entreprise</p>
-
-                    <span class="h5 mb-4">Let's Check what we do actually :</span>
+                    <!-- <p class="mb-4">Une statup de jeunes développeurs qui propose des services innovants. <br> Nous vous aidons à accelerer la croissance de votre entreprise et  de devolopper la présence digitale de votre entreprise</p> -->
+                    <p>
+                        La team Ethical Hackers est un groupe de jeunes développeurs et d'administrateurs réseaux qui vit le jour à l'université Alioune DIOP de BAMBEY, SENEGAL,  évoluant dans les métiers du numérique . Créée en 2018, elle a pour vocation de créer et d'aider à créer des produits et services numériques à forte valeur ajoutée.
+ Ethical Hackers est bien connu pour créer des applications web et mobiles et de plateformes les plus innovantes et accrocheuses pour des startups, entreprises, organisations et multinationales. Notre équipe qualifiée et expérimentée est toujours prête à relever les défis afin de créer des produits à fortes valeurs ajoutées qui sont conçus pour apporter de la croissance à votre projet.
+                    </p>
+                    <!-- <span class="h5 mb-4">Let's Check what we do actually :</span>
                     <ul class="about-list2 my-4">
                         <li class="mb-2"><i class="icofont icofont-check-circled"></i> Best Analytics Audits to your site in specific niche</li>
 
@@ -106,7 +109,7 @@
                         <li class="mb-2">
                             <i class="icofont icofont-check-circled"> </i> Social networking and relative sharing More quality content, 
                         </li>
-                    </ul>
+                    </ul> -->
 
                     <a href="#" class="mt-3 d-inline-block">Learn more about us <i class="fa fa-angle-right"></i></a>
                 </div>
