--- a/about.html
+++ b/about.html
@@ -88,11 +88,11 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-                    <h3 class="mb-3">We’re Innovators & <br>SEO Marketing Agency</h3>
+                    <h3 class="mb-3">Ce que nous sommes</h3>
                     <!-- <p class="mb-4">Une statup de jeunes développeurs qui propose des services innovants. <br> Nous vous aidons à accelerer la croissance de votre entreprise et  de devolopper la présence digitale de votre entreprise</p> -->
                     <p>
                         La team Ethical Hackers est un groupe de jeunes développeurs et d'administrateurs réseaux qui vit le jour à l'université Alioune DIOP de BAMBEY, SENEGAL,  évoluant dans les métiers du numérique . Créée en 2018, elle a pour vocation de créer et d'aider à créer des produits et services numériques à forte valeur ajoutée.
- Ethical Hackers est bien connu pour créer des applications web et mobiles et de plateformes les plus innovantes et accrocheuses pour des startups, entreprises, organisations et multinationales. Notre équipe qualifiée et expérimentée est toujours prête à relever les défis afin de créer des produits à fortes valeurs ajoutées qui sont conçus pour apporter de la croissance à votre projet.
+                         Ethical Hackers est bien connu pour créer des applications web et mobiles et de plateformes les plus innovantes et accrocheuses pour des startups, entreprises, organisations et multinationales. Notre équipe qualifiée et expérimentée est toujours prête à relever les défis afin de créer des produits à fortes valeurs ajoutées qui sont conçus pour apporter de la croissance à votre projet.
                     </p>
                     <!-- <span class="h5 mb-4">Let's Check what we do actually :</span>
                     <ul class="about-list2 my-4">
@@ -111,11 +111,11 @@
                         </li>
                     </ul> -->
 
-                    <a href="#" class="mt-3 d-inline-block">Learn more about us <i class="fa fa-angle-right"></i></a>
+                    <!-- <a href="#" class="mt-3 d-inline-block">Learn more about us <i class="fa fa-angle-right"></i></a> -->
                 </div>
 
                 <div class="col-lg-6 col-md-4">
-                    <img src="images/about/about-4.jpg" alt="" class="img-fluid w-100">
+                    <img src="images/about/about.jpg" alt="" class="img-fluid w-100">
                 </div>
             </div>
         </div>
@@ -130,8 +130,8 @@
                     <img src="images/about/h-1.jpg" alt="" class="img-fluid rounded mr-3">
                     
                     <div class="media-body ">
-                        <h4 class="mb-3">Provide services with maintain quality from 24 years!</h4>
-                        <p>We provide marketing services to startups.Let's start your site in grow high.</p>
+                        <h4 class="mb-3">Notre mission</h4>
+                        <p>La team Ethical Hackers se veut être l'un des plus grands Startup  dans le but de contribuer au développement des Technologies de l'Information et de la Communication(TIC) comme le font  la majorité des jeunes startups africains. </p>
                     </div>
                 </div>
             </div>
@@ -140,8 +140,8 @@
                     <img src="images/about/h-2.jpg" alt="" class="img-fluid rounded mr-3">
                 
                     <div class="media-body">
-                        <h4 class="mb-3">Our mission is to provide our client what they need!</h4>
-                        <p>We provide small businesses looking for a partner for their digital media</p>
+                        <h4 class="mb-3">Notre vision</h4>
+                        <p>Notre vision est de contribuer à la révolution numérique en cours en participant activement à la formation de jeunes africains particulièrement de jeunes universitaires  et aussi les encourager à l’auto-emploi dans le but de diminuer le taux de chômage en Afrique, expressément au Sénégal.</p>
                     </div>
                 </div>
             </div>
@@ -151,7 +151,7 @@
 <!--  HISTORY AREA END  -->
 
 <!--  SECTION Service-2START  -->
-<section class="section-padding" id="section-strategy">
+<!-- <section class="section-padding" id="section-strategy">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
@@ -159,28 +159,28 @@
                     <div class="col-lg-6">
                         <div class="mb-5">
                             <span class="icon-3x text-default"><i class="icofont-layers"></i></span>
-                            <h4 class="my-3">Be on the top of Google</h4>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. </p>
+                            <h4 class="my-3">Soyez au sommet de Google</h4>
+                            <p>Capitalisez sur des fruits à portée de main pour identifier une activité à valeur ajoutée approximative à tester en version bêta. </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="mb-5">
                             <span class="icon-3x text-default"><i class="icofont-ui-timer"></i></span>
-                            <h4 class="my-3">Save your time</h4>
-                            <p>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology </p>
+                            <h4 class="my-3">Gagnez du temps</h4>
+                            <p>Surmontez la fracture numérique avec des clics supplémentaires de DevOps. Nanotechnologie</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div>
                             <span class="icon-3x text-default"><i class="icofont-ui-browser"></i></span>
-                            <h4 class="my-3">Cross-devices ability</h4>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. </p>
+                            <h4 class="my-3">Capacité multi-appareils</h4>
+                            <p>Capitalisez sur des fruits à portée de main pour identifier une activité à valeur ajoutée approximative à tester en version bêta.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div>
                             <span class="icon-3x text-default"><i class="icofont icofont-shield"></i></span>
-                            <h4 class="my-3">Trusted by hundreds</h4>
+                            <h4 class="my-3">Reconnu par des centaines</h4>
                             <p>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology </p>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!--  SECTION Service-2 END  -->
  
 <!--  COUNTER AREA START  -->
