--- a/membres.html
+++ b/membres.html
@@ -122,8 +122,8 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="mb-5">
-                    <h3 class="mb-2">Our Expert Members do the magical</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, dignissimos?</p>
+                    <h3 class="mb-2"> Chef de Projet et la commission
+                        de la Team Ethical Hackers</h3>
                 </div>
             </div>
         </div>
@@ -197,40 +197,16 @@
             
             <div class="col-lg-4 col-md-6">
                 <img src="images/team/team-6.jpg" alt="" class="img-fluid rounded w-100">
-
-                <ul class="list-unstyled list-inline team-social mt-4">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus"></i></a></li>
-                </ul>
                 <h4 class="mt-3">WAYNDE H DIENG</h4>
                 <p>Responsable de la communication digital</p>
             </div>
             <div class="col-lg-4 col-md-6">
                 <img src="images/team/team-5.jpg" alt="" class="img-fluid rounded w-100">
-
-                <ul class="list-unstyled list-inline team-social mt-4">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus"></i></a></li>
-                </ul>
                 <h4 class="mt-3">SALIOU DIOME</h4>
                 <p>Adjoint Responsable de la communication digital</p>
             </div>
             <div class="col-lg-4 col-md-6">
                 <img src="images/team/team-8.jpg" alt="" class="img-fluid rounded w-100">
-
-                <ul class="list-unstyled list-inline team-social mt-4">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus"></i></a></li>
-                </ul>
                 <h4 class="mt-3">SERIGNE SALIOU FAYE</h4>
                 <p>Adjoint Responsable de la communication digital</p>
             </div>
