--- a/service.html
+++ b/service.html
@@ -9,8 +9,7 @@
     <meta name="keywords" content="marketing,digital marketing,creative, agency, startup,promodise,onepage, clean, modern,seo,business, company">
     <meta name="author" content="Themefisher.com">
 
-   <title>Promodise - seo and digital marketing solution </title>
-    <!-- bootstrap.min css -->
+    <title>Team Ethical Hackers</title>    <!-- bootstrap.min css -->
     <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.css">
     <!-- Icofont Css -->
     <link rel="stylesheet" href="plugins/fontawesome/css/all.css">
