modifs sidy sur footer...

--- a/membres.html
+++ b/membres.html
@@ -203,17 +203,17 @@
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <h4>Contacts</h4>
-                    <p class="mail"><span>Email:</span> teamethicalhackers15@gmail.com</p>
-                    <p><span>Téléphone :</span> +221 78 370 99 08</p>
+                    <p class="mail"><span>Email: </span><a href="mailto:teamethicalhackers15@gmail.com">teamethicalhackers15@gmail.com</a></p>
+                    <p><span>Téléphone : </span><a href="tel:+22178309908">+221 78 370 99 08</a> </p>
                     <p><span>Localisation:</span> Université Alioune Diop de Bambey, Diourbel, Sénégal</p>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <br> <br>
-                    <p><span>Instagram : </span>instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx</p>
-                    <p><span>Linkedin : </span>linkedin.com/in/team-ethical-hackers-a623aa203</p>
-                    <p><span>Github : </span>github.com/TEAM-ETHICAL-HACKERS</p>
+                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx">TEAM ETHICAL HACKERS</a></p>
+                    <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers">TEAM ETHICAL HACKERS</a> </p>
+                    <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS">TEAM ETHICAL HACKERS</a> </p>
                 </div>
             </div>
         </div>
@@ -226,6 +226,7 @@
         </div>
     </div>
 </section>
+
   <!-- Main jQuery -->
   <script src="plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4.3.1 -->
