--- a/service.html
+++ b/service.html
@@ -196,42 +196,35 @@
 
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
-    <div class="container">
-      <div class="row justify-content-around">
-        <div class="col-lg-4">
-          <div class="footer-widget footer-link">
-            <h4>Nous nous préoccupons de vouspour développer<br>  rapidement les affaires.</h4>
-            <p>Pour l'installation de Système d'exploitation, la réalisation de site vitrine et les conceptions d'affiches, de flyers, Logo et CV.</p>
+  <div class="container">
+      <div class="row">
+
+          <div class="col-lg-6 col-sm-6 col-md-6">
+              <div class="footer-widget footer-text">
+                  <h4>Contacts</h4>
+                  <p class="mail"><span>Email: </span><a href="mailto:teamethicalhackers15@gmail.com">teamethicalhackers15@gmail.com</a></p>
+                  <p><span>Téléphone : </span><a href="tel:+22178309908">+221 78 370 99 08</a> </p>
+                  <p><span>Localisation:</span> Université Alioune Diop de Bambey, Diourbel, Sénégal</p>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-6">
-          <div class="footer-widget footer-link">
-            <h4>About</h4>
-            <ul>
-              <li><a href="{{url('/about')}}">Membre</a></li>
-              <li><a href="{{url('/service')}}">Service</a></li>
-              <li><a href="{{url('/contact')}}">Projets</a></li>
-            </ul>
+          <div class="col-lg-6 col-sm-6 col-md-6">
+              <div class="footer-widget footer-text">
+                  <br> <br>
+                  <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx">TEAM ETHICAL HACKERS</a></p>
+                  <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers">TEAM ETHICAL HACKERS</a> </p>
+                  <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS">TEAM ETHICAL HACKERS</a> </p>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-5 col-md-4 col-sm-12">
-          <div class="footer-widget footer-text">
-            <h4>Notre emplacement</h4>
-            <p class="mail"><span>Mail:</span> teamethicalhackers15@gmail.com</p>
-            <p><span>Téléphone :</span>+221 78 370 99 08</p>
-            <p><span>lieu:</span>  Université Alioune Diop de Bambey, Diourbel, Sénégal</p>
-          </div>
-        </div>
       </div>
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <div class="footer-copy">
-            Copyright &copy; 2022 Team Ethical Hackers. All Rights Reserved
+          <div class="col-lg-12 text-center">
+              <div class="footer-copy">
+                  © 2022 Team Ethical Hackers. All Rights Reserved.
+              </div>
           </div>
-        </div>
       </div>
-    </div>
-  </section>
+  </div>
+</section>
   <!--  FOOTER AREA END  -->
 
    
