--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img width="160" src="images/TEHlogo.png" alt="" class="img-fluid b-logo">
+                <img width="140" src="images/TEHlogo.png" alt="" class="img-fluid b-logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
@@ -231,17 +231,17 @@
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <h4>Contacts</h4>
-                    <p class="mail"><span>Email:</span> teamethicalhackers15@gmail.com</p>
-                    <p><span>Téléphone :</span> +221 78 370 99 08</p>
+                    <p class="mail"><span>Email: </span><a href="mailto:teamethicalhackers15@gmail.com">teamethicalhackers15@gmail.com</a></p>
+                    <p><span>Téléphone : </span><a href="tel:+22178309908">+221 78 370 99 08</a> </p>
                     <p><span>Localisation:</span> Université Alioune Diop de Bambey, Diourbel, Sénégal</p>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <br> <br>
-                    <p><span>Instagram : </span>instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx</p>
-                    <p><span>Linkedin : </span>linkedin.com/in/team-ethical-hackers-a623aa203</p>
-                    <p><span>Github : </span>github.com/TEAM-ETHICAL-HACKERS</p>
+                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx">TEAM ETHICAL HACKERS</a></p>
+                    <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers">TEAM ETHICAL HACKERS</a> </p>
+                    <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS">TEAM ETHICAL HACKERS</a> </p>
                 </div>
             </div>
         </div>
