push 2 about.html

--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
     <div class="overlay dark-overlay"></div>
     <div class="container">
         <div class="row justify-content-center ">
-            <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12 ">
-                <div class="banner-content content-padding mt-5">
+            <div class="col-lg-8 m-auto text-center ">
+                <div class="banner-content content-padding mt-1">
                     <h1 class="text-white  ">TΞΛM ΞTHIϾΛŁ HΛϾКΞЯS</h1>
                     <p>Une statup de jeunes développeurs qui propose des services innovants. <br> Nous vous aidons à accelerer la croissance de votre entreprise et  de devolopper la présence digitale de votre entreprise</p>
                 </div>
