--- a/about.html
+++ b/about.html
@@ -20,6 +20,9 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    
+    <link rel="icon" href="favicon.ico">
+
 
 
 </head>
