--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="icon" href="favicon.ico">
+
 
 </head>
 
