--- a/membres.html
+++ b/membres.html
@@ -21,6 +21,8 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="icon" href="favicon.ico">
+
 
 </head>
 
