--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
-    <div class="container">
+    <div class="container sk">
         <div class="row">
 
             <div class="col-lg-6 col-sm-6 col-md-6">
