--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <h1 style="color: black;font-size: large;background-color: rgb(253, 251, 251);">TΞΛM ΞTHIϾΛŁ HΛϾКΞЯS</h1>
+              <h1 style="color: white;font-size: large;;">TΞΛM ΞTHIϾΛŁ HΛϾКΞЯS</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
               aria-controls="navbarNine" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,8 +99,8 @@
         <h1 style="color: rgb(49, 63, 175); font-size: larger;">TΞΛM ΞTHIϾΛŁ HΛϾКΞЯS</h1>
       </div>
       <p class="text">
-        Une statup de jeunes développeurs qui propose des services innovants.
-        Coding For A Better Life ! :)
+        Une statup de jeunes développeurs et administrateurs réseaux qui propose des services innovants.<br>
+        Coding For A Better Life !   :)
       </p>
       <!-- logo -->
       <div class="sidebar-menu">
@@ -251,8 +251,8 @@
             <div class="service-content">
               <h4> Création d'Applications</h4>
               <p>
-                Conception et réalisation d'application Web, Mobile et Desktop
-                 qui s'adapte aux différents appareils
+                Conception et réalisation d'applications Web, Mobile et Desktop
+                 qui s'adaptent aux différents types d'appareils
               </p>
             </div>
           </div>
@@ -279,7 +279,7 @@
             <div class="service-content">
               <h4>Analyse de données</h4>
               <p>
-                Nous fournissons une bonne analyse et visualisation de données 
+                Nous fournissons une bonne analyse et traitement de données 
                 pour les statistiques de votre entreprise
               </p>
             </div>
@@ -293,7 +293,7 @@
             <div class="service-content">
               <h4>Création de sites</h4>
               <p>
-                Nous vous proposons des sites vitrines 
+                Nous vous proposons des sites simples et responsives
                 pour augmenter la visibilité de votre entreprise.
               </p>
             </div>
@@ -307,7 +307,7 @@
             <div class="service-content">
               <h4>Marketing digital</h4>
               <p>
-                Création de logos, de flyers, d'affiches publicitaires, etc
+                La création de logos, de flyers, d'affiches publicitaires, etc
               </p>
             </div>
           </div>
@@ -625,8 +625,6 @@
       sidebarLeft.classList.add("open");
       overlayLeft.classList.add("open");
     });
-
-    //========= glightbox
    
 
   </script>
