modifs alt et stuffs

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-image">
-            <img src="assets/images/tehlog.png"  alt="#" />
+            <img src="assets/images/tehlog.png"  alt="logo TEH" />
           </div>
         </div>
       </div>
@@ -195,21 +195,30 @@
                 <div class="tab-pane fade show active" id="nav-who" role="tabpanel" aria-labelledby="nav-who-tab">
                   <p>
                     La Team Ethical Hackers est un club de jeunes développeurs et administrateurs
-                     réseaux qui vit le jour à l'université Alioune DIOP de Bambey au SENEGAL.<br> Créée en 2018, elle a pour vocation de créer et d'aider à créer des
-                       produits et services numériques à forte valeur ajoutée.<br> La Team Ethical Hackers est bien connu pour créer
+                     réseaux qui vit le jour à l'université Alioune DIOP de Bambey au SENEGAL.<br> Créée en 2018, elle a pour vocation de créer et d'aider à la création des
+                       produits et services numériques à forte valeur ajoutée.<br> La Team Ethical Hackers est bien connue pour concevoir
                         des applications web et mobiles et des plateformes innovantes et accrocheuses pour des startups, 
                         entreprises, organisations et multinationales.<br> Notre équipe qualifiée et expérimentée est toujours
-                         prête à relever les défis afin d'apporter de la croissance à votre projet.
+                         prête à relever les défis afin d'apporter de la croissance à vos projets.
                   </p>
                 </div>
                 <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
                   <p>Notre vision est de contribuer à la révolution numérique en cours,<br> en participant activement à la 
                     formation de jeunes africains<br> particulièrement de jeunes universitaires et aussi les encourager<br> 
-                    à l’auto-emploi dans le but de diminuer le taux de chômage en Afrique, expressément au Sénégal.</p>
+                    à l’auto-emploi dans le but de diminuer le taux de chômage en Afrique, expressément au Sénégal.<br>
+                    Dans les 10 années qui suivent, nous comptons surhausser considérablement le nombre de jeunes 
+                    Startups en Afrique. Le futur est numérique et nous envisageons de nous baigner dans ce futur avec
+                     nos propres solutions qui prennent en compte nos réalités sociétales.
+                  </p>
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
-                  <p>La team Ethical Hackers se veut être l'un des plus grandes Startup<br> dans le but de contribuer au développement des 
-                    Technologies de l'Information et de la Communication(TIC) comme le font la majorité des jeunes startups africains.</p>
+                  <p>La team Ethical Hackers se veut être l'une des plus grandes Startups<br> dans le but de contribuer au développement des 
+                    Technologies de l'Information et de la Communication (TIC) au Sénégal, en Afrique et partout ailleurs.<br>
+                    L’objectif est de contribuer à la création de produits technologiques à forte valeur ajoutée qui règlent des problématiques 
+                    aussi bien en Afrique que dans le Monde.<br> En outre, nous contribuons également au processus d’innovation d’entreprises existantes 
+                    en les accompagnant dans leur transformation digitale. 
+                    Notre ambition est de devenir la startup numero 1 de la zone Ouest africaine.
+                  </p>
                 </div>
               </div>
             </div>
@@ -345,17 +354,17 @@
             <br>
                   <div class="row">
                       <div class="col-lg-3 col-sm-6 col-md-3 text-center ">
-                          <img width="100" src="assets/clients/client01.png" alt="partner" class="img-fluid"><br><br>
+                          <img width="100" src="assets/clients/client01.png" alt="UADB" class="img-fluid"><br><br>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-                           <img width="100" src="assets/clients/client04.png" alt="partner" class="img-fluid"><br><br>
+                           <img width="100" src="assets/clients/client04.png" alt="DET UADB" class="img-fluid"><br><br>
                       </div>
                      
                       <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-                          <img width="100" src="assets/clients/client05.png" alt="partner" class="img-fluid"><br><br>
+                          <img width="100" src="assets/clients/client05.png" alt="UADB ENG CLUB" class="img-fluid"><br><br>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-                          <img width="100" src="assets/clients/client02.png" alt="partner" class="img-fluid">
+                          <img width="100" src="assets/clients/client02.png" alt="AEERK" class="img-fluid">
                       </div>
                   </div>
           
@@ -381,7 +390,7 @@
             <div class="content">
               <h6>Notre Produit</h6>
               <div class="text-center ">
-                <img width="300" src="assets/clients/client06.png" alt="partner" class="img-fluid"><br>
+                <img width="300" src="assets/clients/client06.png" alt="logo alafunti" class="img-fluid"><br>
               </div>
               <p>
                 La marque Alafunti est un produit de la Team Ethical Hackers.<br>
@@ -466,7 +475,7 @@
               <h6>Equipe</h6>
               <h2 class="fw-bold">Les Membres de notre Equipe</h2>
               <p>
-                Notre équipe qualifiée et expérimentée est 
+                Notre équipe est qualifiée et expérimentée. Elle est 
                 toujours prête à relever les défis afin d'apporter de la croissance à votre projet.
               </p>
             </div>
@@ -482,67 +491,67 @@
         <div class="col-lg-12 col-12">
           <div class="clients-logos">
             <div class="single-image">
-              <img src="assets/images/team/team-1.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-1.jpg" alt="Papa Sidy Mactar TRAORE" />
               <h5 class="mt-3">SIDY MACTAR TRAORE</h5>
               <p>Software Architect & Data Analyst</p>            
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-2.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-2.jpg" alt="Serigne Mbacke SECK" />
               <h5 class="mt-3">S MBACKE SECK</h5>
                 <p>Business & Community Manager </p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-3.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-3.jpg" alt="Fallou TOURE" />
               <h5 class="mt-3">FALLOU TOURE</h5>
                 <p>Frontend Dev & Inovation </p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-4.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-4.jpg" alt="Abdoulaye NDIAYE" />
               <h5 class="mt-3">ABDOULAYE NDIAYE</h5>
                 <p>Software Architect & Lead Backend</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-7.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-7.jpg" alt="ElHadji Serigne MBACKE" />
               <h5 class="mt-3">ELHADJI S MBACKE</h5>
               <p>DevOps & Software Architect</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-13.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-13.jpg" alt="Abdou Khadre NDIAYE" />
               <h5 class="mt-3">ABDOU KHADRE NDIAYE</h5>
                 <p>System & Network Administrator</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-8.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-8.jpg" alt="Serigne Saliou FAYE" />
               <h5 class="mt-3">SERIGNE SALIOU FAYE</h5>
                 <p>Laravel Dev & UI/UX Designer</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-6.jpg" alt="Brand Logo Images" />
-              <h5 class="mt-3">WAYNDE HECTOR DIENG</h5>
+              <img src="assets/images/team/team-6.jpg" alt="Weynde Hector DIENG" />
+              <h5 class="mt-3">WEYNDE HECTOR DIENG</h5>
                 <p>Angular Dev & UI/UX Designer</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-10.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-10.jpg" alt="Amadou NDIAYE" />
               <h5 class="mt-3">AMADOU NDIAYE</h5>
                 <p> Backend Dev & Designer</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-11.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-11.jpg" alt="Lamine Ayoba GUEYE" />
               <h5 class="mt-3">LAMINE A GUEYE</h5>
                 <p>Laravel Dev & Designer</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-9.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-9.jpg" alt="Mouhamadou Moustapha TRAORE" />
               <h5 class="mt-3">LAMINE TRAORE</h5>
                 <p>FullStack Dev</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-5.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-5.jpg" alt="Serigne Saliou Mbacke DIOME" />
               <h5 class="mt-3">SALIOU DIOME</h5>
                 <p>FullStack Dev</p>
             </div>
             <div class="single-image">
-              <img src="assets/images/team/team-12.jpg" alt="Brand Logo Images" />
+              <img src="assets/images/team/team-12.jpg" alt="Paul Cheikh Anta DIOUF" />
               <h5 class="mt-3">PAUL DIOUF</h5>
                 <p>JavaEE Dev</p>
             </div>
@@ -562,15 +571,15 @@
                   <br><br> <h2>Contacts</h2><br>
                     <p class="mail"><span>Email: </span><a href="mailto:teamethicalhackers15@gmail.com">teamethicalhackers15@gmail.com</a></p><br>
                     <p><span>Téléphone : </span><a href="tel:+22178309908">+221 78 370 99 08</a> </p><br>
-                    <p><span>Localisation:</span> Université Alioune Diop, Bambey, Diourbel, Sénégal</p><br><br>
+                    <p><span>Localisation: </span><i class="lni lni-map"></i>  Université Alioune Diop, Bambey, Diourbel, Sénégal</p><br><br>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <br> <br><br><br><br>
-                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx"> ETHICAL HACKERS</a></p><br>
-                    <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers">TEAM ETHICAL HACKERS</a> </p><br>
-                    <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS">TEAM ETHICAL HACKERS</a> </p>
+                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx"><i class="lni lni-arrow-top-right"></i> ETHICAL HACKERS</a></p><br>
+                    <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers"><i class="lni lni-arrow-top-right"></i> TEAM ETHICAL HACKERS</a> </p><br>
+                    <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS"><i class="lni lni-arrow-top-right"></i> TEAM ETHICAL HACKERS</a> </p>
                 </div>
             </div>
         </div>
