image groupe haute qualite

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="col-lg-6 col-12">
           <div class="about-image-five">
            
-            <img src="assets/images/teh.jpg" alt="about" />
+            <img src="assets/images/teh1.jpg" alt="about" />
           </div>
         </div>
         <div class="col-lg-6 col-12">
